AH 124: update day-off-info
