# config/routes.rb
@@ -10,7 +10,7 @@ Rails.application.routes.draw do
       get 'employees/:id/day-off-requests', to: 'day_off_request#index'
       post 'password/validate_token', to: 'password#validate_token'
       resources :password, only: %i[create update]
-      put 'day-off-infos/:id', to: 'day_off_info#update'
+      patch 'day-off-infos/:id', to: 'day_off_info#update'
       get 'day-off-categories', to: 'day_off_categories#index'
       resources :device_categories
       post 'google_login', to: 'sessions#google_login'
