# public/swagger.yaml
@@ -8,6 +8,7 @@ servers:
 tags:
   - name: Login
   - name: Employees
+  - name: Day Off
 paths:
   '/employees/{id}':
     get:
@@ -96,12 +97,7 @@ paths:
             type: string
       responses:
         '200':
-          description: Send mail ok
-          content:
-            application/json:
-              schema:
-                type: string
-                example: ok
+          $ref: '#/components/responses/RequestSuccess'
         '404':
           $ref: '#/components/responses/NotFound'
   /password/validate_token:
@@ -122,14 +118,7 @@ paths:
             type: string
       responses:
         '200':
-          description: valid true
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  valid:
-                    type: boolean
+          $ref: '#/components/responses/RequestSuccess'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '404':
@@ -162,24 +151,60 @@ paths:
           required: true
       responses:
         '200':
-          description: Update success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: integer
-                    example: 200
-                  message:
-                    type: string
-                    example: 'Update success'
+          $ref: '#/components/responses/RequestSuccess'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '404':
           $ref: '#/components/responses/NotFound'
+  '/day-off-infos/{id}':
+    patch:
+      tags:
+      - Day Off
+      parameters:
+        - name: id
+          in: path
+          description: DayOffInfo ID
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1
+      summary: Update DayOffInfo
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DayOffInfo'
+      responses:
+        '200':
+          $ref: '#/components/responses/RequestSuccess'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Permission'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '422':
+          $ref: '#/components/responses/InvalidParams'
 components:
   responses:
+    RequestSuccess:
+      description: Request Success
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              message:
+                type: string
+                example: "Request Success"
+            required:
+              - code
+              - message
     NotFound:
       description: The specified resource was not found
       content:
@@ -228,39 +253,35 @@ components:
             required:
               - code
               - message
-    
+    InvalidParams:
+      description: Invalid Params
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 422
+              message:
+                type: string
+                example: "Invalid Params"
+            required:
+              - code
+              - message
   schemas:
-    User:
+    DayOffInfo:
       type: object
       properties:
         id:
           type: integer
           format: int64
-        email:
-          type: string
-        encrypted_password:
-          type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
-        birthdate:
-          type: string
-          format: date
-        join_date:
-          type: string
-          format: date
-        status:
-          type: string
-        phone_number:
-          type: string
-        roles:
-          type: string
-        reset_password_token:
-          type: string
-        reset_password_sent_at:
-          type: string
-          format: datetime
+        hours:
+          type: integer
+          format: int64
+        day_off_category_id:
+          type: integer
+          format: int64
     Employee:
       type: object
       properties:
